--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,33 @@
         <maven.compile.target>1.8</maven.compile.target>
     </properties>
 
-    <modules>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.16.20</version>
+            </dependency>
 
+            <!-- mybatis -->
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>1.3.2</version>
+            </dependency>
+
+
+            <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.51.sec06</version>
+            </dependency>
+
+        </dependencies>
+    </dependencyManagement>
+
+    <modules>
         <module>api-service-bill</module>
         <module>api-service-user</module>
         <module>api-gateway-core</module>
