--- a/api-gateway-core/pom.xml
+++ b/api-gateway-core/pom.xml
@@ -36,5 +36,11 @@
             <artifactId>guava</artifactId>
             <version>25.1-jre</version>
         </dependency>
+
+        <dependency>
+            <groupId>pers.zhixilang</groupId>
+            <artifactId>service-center</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
