--- a/api-service-bill/pom.xml
+++ b/api-service-bill/pom.xml
@@ -35,5 +35,11 @@
             <artifactId>fastjson</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>pers.zhixilang</groupId>
+            <artifactId>service-center</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 </project>
