--- a/api-gateway-core/pom.xml
+++ b/api-gateway-core/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>api-gateway</artifactId>
-        <groupId>pers.zhixilang</groupId>
+        <groupId>pers.zhixilang.ms</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
@@ -38,7 +38,7 @@
         </dependency>
 
         <dependency>
-            <groupId>pers.zhixilang</groupId>
+            <groupId>pers.zhixilang.ms</groupId>
             <artifactId>service-center</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
