--- a/api-service-bill/pom.xml
+++ b/api-service-bill/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>api-gateway</artifactId>
-        <groupId>pers.zhixilang</groupId>
+        <groupId>pers.zhixilang.ms</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
@@ -36,10 +36,19 @@
         </dependency>
 
         <dependency>
-            <groupId>pers.zhixilang</groupId>
+            <groupId>pers.zhixilang.ms</groupId>
             <artifactId>service-center</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
