--- a/api-service-user/pom.xml
+++ b/api-service-user/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>api-gateway</artifactId>
-        <groupId>pers.zhixilang</groupId>
+        <groupId>pers.zhixilang.ms</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
