--- a/api-gateway-core/pom.xml
+++ b/api-gateway-core/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>api-gateway</artifactId>
-        <groupId>pers.zhixilang.ms</groupId>
+        <groupId>pers.zhixilang.lego</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
@@ -12,35 +12,44 @@
 
     <artifactId>api-gateway-core</artifactId>
 
+    <properties>
+        <spring-boot.version>2.2.10.RELEASE</spring-boot.version>
+    </properties>
+
     <dependencies>
+
+        <dependency>
+            <groupId>pers.zhixilang.lego</groupId>
+            <artifactId>service-center</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>${spring-boot.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
-        <dependency>
-            <groupId>dom4j</groupId>
-            <artifactId>dom4j</artifactId>
-            <version>1.6.1</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>29.0-jre</version>
+            <version>${spring-boot.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>pers.zhixilang.ms</groupId>
-            <artifactId>service-center</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 </project>
